Added mock of DRGTK

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,4 @@
 /demo.txt
 /promo_screenshot.png
 /replay_1598759917.txt
-/dragonruby-httpd.exe
-/dragonruby-publish.exe
-/dragonruby.exe
-/.dragonruby
+/*.exe
