Purged proprietary DRGTK binaries

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,7 @@
 /demo.txt
 /promo_screenshot.png
 /replay_1598759917.txt
-/*.exe
+/dragonruby-httpd.exe
+/dragonruby-publish.exe
+/dragonruby.exe
+/.dragonruby
