Purged proprietary DRGTK binaries

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,11 @@
 /.idea/
 *.pdn
 /docs/search_results.txt
+/cover_image.png
+/demo.txt
+/promo_screenshot.png
+/replay_1598759917.txt
+/dragonruby-httpd.exe
+/dragonruby-publish.exe
+/dragonruby.exe
+/.dragonruby
